removes css bug that was creating a scrollbar at the bottom

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,11 +5,17 @@ body {
   transform: translate3d(0, 0, 0);
   background: linear-gradient(99deg, #2980b9 0%, #9b59b6 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#1e5799", endColorstr="#7db9e8",GradientType=1 );
+  margin:0;
 }
 
 .category-name h2 {
   color: white;
-  padding: 50px 20px 5px 20px;
+  padding: 60px 20px 5px 20px;
+}
+
+#cards-go-here {
+  margin-left:0px;
+  margin-right:0px;
 }
 
 /* card */
@@ -17,7 +23,7 @@ body {
   position: relative;
   width: 340px;
   height: 480px;
-  background: none;
+
 }
 
 .question-card {
